# personal-expense-tracker

./: .gitignore
backend/: .env.example  .gitignore  pyproject.toml
backend/api/expenses/: apps.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/api/expenses/migrations/: 0001_initial.py  0002_initial.py
backend/api/users/: models.py  serializers.py
backend/api/users/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
backend/config/settings/: __init__.py  base.py  dev.py  prod.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: PrivateRoute.tsx
frontend/src/contexts/: AuthContext.tsx  auth-context-types.ts
frontend/src/hooks/: useAuth.ts
frontend/src/lib/: api.ts
frontend/src/pages/: Dashboard.tsx  Login.tsx  Register.tsx
frontend/src/types/: auth.ts  expense.ts
